🐛 Fix styling and layout issues in NamedVersionSelector components

--- a/packages/changed-elements-react/src/NamedVersionSelector/NamedVersionSelector.scss
+++ b/packages/changed-elements-react/src/NamedVersionSelector/NamedVersionSelector.scss
@@ -106,7 +106,6 @@
 
     ._cer_v1_named-version-list {
       margin: 0;
-      min-width: min-content;
       overflow: auto;
 
       display: grid;
@@ -114,9 +113,6 @@
       height: 100%;
       width: 100%;
 
-      > * {
-        padding-inline: var(--_cer_v1_container-margin-internal);
-      }
     }
 
     ._cer_v1_named-version-entry {
@@ -129,7 +125,7 @@
       grid-template-columns: subgrid;
       grid-column: 1 / 4;
       align-items: center;
-
+      grid-auto-flow: column;
       > :nth-child(2):last-child {
         grid-column: 2 / 4;
       }
